--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 * {
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+}
+
+body {
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
 }
