--- a/styles/index.css
+++ b/styles/index.css
@@ -10,4 +10,9 @@ body {
     margin: 0;
     width: 100vw;
     height: 100vh;
+    background-color: #fcf4e9; 
+}
+
+#loader {
+    text-align: center;
 }
