--- a/styles/skeleton.css
+++ b/styles/skeleton.css
@@ -21,7 +21,7 @@
 
 .postIcon {
     position: fixed;
-    top: 30px;
+    top: 10px;
     right: 30px;
     font-size: 52px;
     padding: 10px;
@@ -73,7 +73,8 @@
 
 .main {
     width: 100vw;
-    height: 120vh;
+    height: 80%;
+    overflow: scroll;
     position: fixed;
     top: 10vh;
     left: 0;
