--- a/styles/profile.css
+++ b/styles/profile.css
@@ -33,7 +33,8 @@
 }
 
 .user-card-full .user-profile {
-    border-radius: 5px 0 0 5px
+    border-top-right-radius: 5px 0 0 5px;
+    border-top-left-radius: 5px 0 0 5px;
 }
 
 .bg-c-lite-green {
@@ -136,4 +137,9 @@ h6 {
     margin: 0 10px 0 0;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out
+}
+
+#edit-btn {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
