--- a/styles/myListings.css
+++ b/styles/myListings.css
@@ -1,31 +1,38 @@
+a {
+    cursor: pointer;
+}
 
 .listingcard{
     text-decoration: none;
 }
 
 .myCard {
+    /* background-color: #f8f8f8; */
     margin: 5px 0;
     color: #31393c;
     width: 100%;
-    height: 150px;
+    height: 100px;
     border: 1px solid #dcdcdc;
     border-radius: 5px;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 30% 70%;
     grid-template-rows: 50% 50%;
     padding: 5px;
+}
 
+.myCard:hover {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .main > a:nth-child(2n-1) > div{
-    background-color: #ced073;
+    background-color: #f7e0c1;
 }
 
 .listingImg {
     grid-column: 1 / span 1;
     grid-row: 1 / span 2;
     width: 100%;
-    height: 140px;
+    height: 90px;
     border-radius: 5px;
 }
 
@@ -33,7 +40,7 @@
     grid-column: 2 / span 1;
     grid-row: 1 / span 1;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 14px;
     padding-left: 7px;
     align-self: end;
 }
