feat: change default image

--- a/styles/detail.css
+++ b/styles/detail.css
@@ -4,7 +4,7 @@
 }
 
 .item-image {
-    background-image: url("https://dummyimage.com/600x400/000/fff");
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/No-Image-Placeholder.svg/660px-No-Image-Placeholder.svg.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
